--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,3 +2,4 @@ $ColorPrimario: rgba(42, 44, 59, 1);
 $ColorSecundario: rgba(231, 66, 60, 1);
 $ColorWhatsapp: rgb(29, 214, 57);
 $FondoClaro: rgba(186, 186, 186, .3);
+$FondoAlpha: rgba(255, 255, 255, 0);
