--- a/css/styles.css
+++ b/css/styles.css
@@ -256,11 +256,7 @@ button {
 
 @media (max-width: 1200px) {
   .container {
-    width: 900px; }
-  .banner__content {
-    display: flex;
-    flex-flow: column-reverse wrap;
-    align-items: flex-end; }
+    width: 1000px; }
   .header__content {
     display: flex;
     flex-flow: column wrap; }
@@ -303,16 +299,9 @@ button {
 
 @media (max-width: 480px) {
   .container {
-    width: 400px; }
-  .card {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-top: 40px; }
-  .header__content {
-    display: flex;
-    flex-flow: column wrap; }
+    width: 440px; }
   .banner {
-    margin: 20px; }
+    padding: 20px; }
     .banner__content {
       display: flex;
       flex-flow: column wrap; }
@@ -321,9 +310,6 @@ button {
     flex-flow: column wrap; }
     .servicios__content-title {
       width: 300px; }
-  .footer__content {
-    display: flex;
-    flex-flow: column wrap; }
   .formulario input {
     width: 300px; }
   .formulario textarea {
