--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,12 +1,6 @@
 @media (max-width: 1200px) {
     .container {
-        width: 900px;
-    }
-
-    .banner__content {
-        display: flex;
-        flex-flow: column-reverse wrap;
-        align-items: flex-end;
+        width: 1000px;
     }
 
     .header__content {
@@ -78,22 +72,11 @@
 
 @media (max-width: 480px) {
     .container {
-        width: 400px;
-    }
-
-    .card {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin-top: 40px;
-    }
-
-    .header__content {
-        display: flex;
-        flex-flow: column wrap;
+        width: 440px;
     }
 
     .banner {
-        margin: 20px;
+        padding: 20px;
 
         &__content {
             display: flex;
@@ -108,11 +91,6 @@
         &-title {
             width: 300px;
         }
-    }
-
-    .footer__content {
-        display: flex;
-        flex-flow: column wrap;
     }
 
     .formulario {
