--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -29,14 +29,21 @@ footer {
     bottom: 30px;
     right: 20px;
     font-size: 40px;
-    background-color: $ColorWhatsapp;
-    text-decoration: none;
-    border-radius: 50%;
-    padding: 10px 20px;
 
     a {
         color: white;
+        background-color: $ColorWhatsapp;
+        text-decoration: none;
+        border-radius: 50%;
+        padding: 15px 20px;
+        transition: all 0.5s;
+
+        &:hover {
+            color: $ColorWhatsapp;
+            background-color: white;
+        }
     }
+
 
 }
 
