--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,10 +9,6 @@
             justify-content: space-between;
             align-items: center;
 
-                i {
-                    font-size: 20px;
-                }
-
                 ul {
                     display: flex;
                     justify-content: space-around;
@@ -26,11 +22,10 @@
                             font-weight: 600;
                             color: rgba(243, 244, 238, 1);
                             font-size: 14px;
-                            transition: border-bottom 0.3s;
+                            transition: color 0.3s;
 
                             &:hover {
-                                border-bottom: solid 2px $ColorSecundario;
-                                padding-bottom: 10px;
+                                color: $ColorSecundario;
                             }
                         }
                     }
