--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -11,7 +11,7 @@
             h1 {
                 color: white;
                 font-size: 60px;
-                font-weight: bold;
+                font-weight: 400;
                 margin-bottom: 30px;
                 line-height: 70px;
             }
@@ -19,9 +19,9 @@
             h2 {
                 color: white;
                 font-size: 25px;
-                font-weight: bolder;
+                font-weight: 400;
                 font-style: italic;
-                margin-bottom: 50px;
+                margin-bottom: 30px;
                 line-height: 30px;
             }
 
@@ -33,6 +33,29 @@
                 line-height: 25px;
             }
     }
+}
+
+.btn-rrss {
+        color: white;
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 50%;
+        transition: all 0.5s;
+
+        &:hover {
+            color: $ColorSecundario;
+            background-color: white;
+        }
+}
+
+.btn-facebook {
+    @extend .btn-rrss;
+    background-color: $ColorSecundario;
+}
+
+.btn-instagram {
+    @extend .btn-rrss;
+    background-color: $ColorSecundario;
 }
 
 .btn-base {
@@ -139,15 +162,16 @@
                     margin-bottom: 20px;
                 }   
 
-                h1 {
+                h2 {
                     color: $ColorSecundario;
                     text-align: center;
-                    font-size: 30px;
-                    margin-bottom: 40px;
+                    font-size: 25px;
+                    margin-bottom: 20px;
                 }
+                
 
                 p {
-                    font-size: 14px;
+                    font-size: 16px;
                     text-align: center;
                     line-height: 24px;
                     margin-bottom: 40px;
