corrigiendo las medias

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ button {
 
 @media (max-width: 1200px) {
   .container {
-    width: 1000px; }
+    width: 768px; }
   .servicios__content {
     display: grid;
     grid-template-columns: repeat(2, 1fr); }
@@ -322,7 +322,7 @@ button {
 
 @media (max-width: 768px) {
   .container {
-    width: 700px; }
+    width: 490px; }
   .header__content-navbar {
     display: none; }
   .header__content-rrss {
@@ -347,7 +347,7 @@ button {
     .footer__content ul {
       margin-bottom: 10px; } }
 
-@media (max-width: 480px) {
+@media (max-width: 490px) {
   .container {
     width: 380px; }
   .banner {
@@ -376,6 +376,14 @@ button {
   .formulario textarea {
     width: 300px; } }
 
+@media (max-width: 380px) {
+  .container {
+    width: 320px; } }
+
 @media (max-width: 320px) {
   .container {
-    width: 300px; } }
+    width: 280px; } }
+
+@media (max-width: 280px) {
+  .container {
+    width: 240px; } }
