--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ select {
   background-color: #2a2c3b;
   color: white;
   padding: 10px;
-  width: 100px;
+  width: 130px;
   height: 40px; }
 
 input {
@@ -349,7 +349,7 @@ button {
 
 @media (max-width: 490px) {
   .container {
-    width: 380px; }
+    width: 320px; }
   .banner {
     padding: 20px; }
     .banner__content {
@@ -370,20 +370,26 @@ button {
     .servicios__content article p {
       font-size: 14px; }
     .servicios__content-title {
-      width: 300px; }
+      width: 260px; }
+    .servicios__content img {
+      width: 240px; }
+    .servicios__content-iconos img {
+      width: 60px; }
   .formulario input {
-    width: 300px; }
+    width: 260px; }
   .formulario textarea {
+    width: 260px; }
+  .footer__content-navbar {
+    display: none; } }
+
+@media (max-width: 340px) {
+  .container {
     width: 300px; } }
 
-@media (max-width: 380px) {
+@media (max-width: 300px) {
   .container {
-    width: 320px; } }
+    width: 260px; } }
 
-@media (max-width: 320px) {
-  .container {
-    width: 280px; } }
-
-@media (max-width: 280px) {
+@media (max-width: 260px) {
   .container {
     width: 240px; } }
